--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,4 +1,27 @@
-{% extends 'base.html' %}
-{% block content %}
-<h1>home</h1>
+<!-- Estendemos do template base -->
+{% extends "layouts/base.html" %}
+
+<!-- Bloco que define o <title></title> da nossa página -->
+{% block title %}UBS PINHO{% endblock %}
+
+<!-- Bloco de conteúdo da nossa página -->
+{% block conteudo %}
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+      <div class="card">
+        <div class="card-header">
+          <h3 class="card-title">Cadastros de Pacientes</h3>
+        </div> 
+        <div class="card-body">
+          <legend>
+            Faça aqui os cadastros ou aletrações de dados dos pacientes.
+          </legend>
+            <a href="#" class="btn btn-primary">CONSULTAR</a>
+            <a href="#" class="btn btn-primary">ALTERAR/CADASTRAR</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
