editada a view para criação de tabela via ajax; adição das urls para as views; os escripts foram desmenbrados para cada um para sua pagina; os templates tiveram algumas modificações no design

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -17,8 +17,8 @@
           <legend>
             Faça aqui os cadastros ou aletrações de dados dos pacientes.
           </legend>
-            <a href="#" class="btn btn-primary">CONSULTAR</a>
-            <a href="#" class="btn btn-primary">ALTERAR/CADASTRAR</a>
+            <a href="{% url 'pacientes:consultar' %}" class="btn btn-primary">CONSULTAR</a>
+            <a href="{% url 'pacientes:cadastro' %}" class="btn btn-primary">ALTERAR/CADASTRAR</a>
         </div>
       </div>
     </div>
