--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -24,7 +24,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="{% url 'home:index' %}">
-              <img src="{% static 'pacientes/img/z3.png' %}" height="45px">
+              <img src="{% static 'pacientes/img/logo2.png' %}" height="45px" alt="logo">
             </a>
             <button class="navbar-toggler" type="button"
                 data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -49,15 +49,15 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav float-right">
-                    <img src="{% static 'pacientes/img/logo.jpg' %}" alt="UBS PINHO" class="img-thumbnail mb-3" width=400>
+                    <img alt="UBS PINHO" class="img-thumbnail mb-3" src="{% static 'pacientes/img/logo.jpg' %}"
+                         width=400>
                 </ul>
             </div>
         </nav>
 
         {% block conteudo %}{% endblock %}
 
-        <!-- Scripts .js -->
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.5.1.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <script src="{% static 'pacientes/js/scripts.js' %}"></script>
