editado o script cadastro.js com atualizacao para usar jquery efazer a busca automática pelo sus e nome; atualizado algumas coisa no layout da pagina de cadastro; melhorada a busca por requisicao assincrona com ajax; atualizada tambem a tabela retornada pela busca.

--- a/templates/pacientes/consultar.html
+++ b/templates/pacientes/consultar.html
@@ -15,7 +15,7 @@
                     <div class="col-md-4">
                         <label id="lb_tipo" for="tipo">Buscar por:</label>
                     </div>
-                    <div id="div_lb_dado" class="col-md-4 style="display: none;"">
+                    <div id="div_lb_dado" class="col-md-4" style="display: none">
                         <label id="lb_dado" for="dado"></label>
                     </div>
                 </div>
@@ -31,7 +31,7 @@
                             <option value="todos">Todos</option>
                         </select>
                     </div>
-                    <div id="div_dado" class="col-md-4" style="display: none;">
+                    <div id="div_dado" class="col-md-4" style="display: none">
                         <input class="form-control" id="dado" name="dado">
                     </div>
                     <div id="div_botao" class="col-md-4">
