--- a/templates/pacientes/cadastro.html
+++ b/templates/pacientes/cadastro.html
@@ -1,63 +1,63 @@
-<!-- Estendemos do template base -->
-{% extends "pacientes/_layouts/base.html" %}
-{% load widget_tweaks %}
+{% extends "layouts/base.html" %}
+{% load static %}
 
-<!-- Bloco que define o <title></title> da nossa página -->
 {% block title %}UBS PINHO{% endblock %}
 
-<!-- Bloco de conteúdo da nossa página -->
 {% block conteudo %}
 <div class="container">
-    <div class="row">
-        <div class="col-sm-3">
-            
-        </div>
-        <div class="col-sm-6">
-            <div class="card">
-                <div class="card mb-3">
-                    <div class="card-header">
-                        <h1 class="display-6">Cadastro de Pacientes</h1>
-                    </div>
-                    <div class="card-body">
-                        <form method="post">
-                            {% csrf_token %}
-                            <fieldset class="col-lg">
-                                <legend>Dados do Paciente</legend>
-                                <div class="input-group">
-                                    <div class="input-group-prepend">
-                                        <label for="id_sus" class="input-group-text">SUS</label>
-                                        {% render_field form.sus class+="form-control" placeholder="999 9999 9999 9999" onblur="pesqSus(this.value)" %}
-                                    </div>
-                                    <div class="input-group-prepend">
-                                        <label for="id_nome" class="input-group-text">NOME</label>
-                                        {% render_field form.nome style="text-transform:uppercase" class+="form-control" onblur="pesqNome(this.value)" %}
-                                    </div>
-                                    <div class="input-group-prepend">
-                                        <label for="id_mae" class="input-group-text">MÃE</label>
-                                        {% render_field form.mae style="text-transform:uppercase" class+="form-control"%}
-                                    </div>
-                                    <div class="input-group-prepend">
-                                        <label for="id_nascimento" class="input-group-text">NASCIMENTO</label>
-                                        {% render_field form.nascimento value=nascimento type="date" class+="form-control"%}
-                                    </div>
-                                    <div class="input-group-prepend">
-                                        <label for="id_familia" class="input-group-text">Nº FAMILIA</label>
-                                        {% render_field form.familia class+="form-control"%}
-                                    </div>
-                                    <div class="input-group-prepend">
-                                        <label for="id_observacao" class="input-group-text">OBSERVAÇÕES</label>
-                                        {% render_field form.observacao class+="form-control"%}
-                                    </div>
-                                </div>
-                                <div class="card-body">
-                                    <button class="btn btn-primary">CADASTRAR/ATUALIZAR</button>
-                                </div>
-                            </fieldset>
-                        </form>
-                    </div>
-                </div>
+    <div class="row justify-content-md-center">
+        <div class="col-sm-6 card">
+            <div class="card-header">
+                <h3 class="display-6">Cadastro de Pacientes</h3>
+            </div>
+            <div class="card-body">
+                <fieldset class="col-lg">
+                    <legend>Dados do Paciente</legend>
+                    <label id="lb_erro" class="text-center alert alert-danger" style="display: none"></label>
+                    <input id="sus_encontrado" type="checkbox" hidden>
+                    <form method="post">
+                        {% csrf_token %}
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <label for="sus" class="input-group-text">SUS</label>
+                                <input id="sus" name="sus" type="text" class="form-control"
+                                       placeholder="999 9999 9999 9999">
+                            </div>
+                            <div class="input-group-prepend">
+                                <label for="nome" class="input-group-text">NOME</label>
+                                <input id="nome" name="nome" type="text" style="text-transform:uppercase"
+                                       class="form-control" placeholder="Nome do paciente">
+                            </div>
+                            <div class="input-group-prepend">
+                                <label for="mae" class="input-group-text">MÃE</label>
+                                <input id="mae" name="mae" type="text" style="text-transform:uppercase"
+                                       class="form-control" placeholder="Nome da mãe">
+                            </div>
+                            <div class="input-group-prepend">
+                                <label for="nascimento" class="input-group-text">NASCIMENTO</label>
+                                <input id="nascimento" name="nascimento" type="date" class="form-control">
+                            </div>
+                            <div class="input-group-prepend">
+                                <label for="familia" class="input-group-text">Nº FAMILIA</label>
+                                <input id="familia" name="familia" type="number" class="form-control"
+                                       placeholder="Familia">
+                            </div>
+                            <div class="input-group-prepend">
+                                <label for="observacao" class="input-group-text">OBSERVAÇÕES</label>
+                                <input id="observacao" name="observacao" type="text" class="form-control"
+                                       placeholder="Observação">
+                            </div>
+                        </div>
+                        <div class="card-body" align="center">
+                            <button id="botao" class="btn btn-primary" style="display: none"></button>
+                        </div>
+                    </form>
+                </fieldset>
             </div>
         </div>
     </div>
 </div>
+{% endblock %}
+{% block scripts %}
+<script src="{% static 'pacientes/js/cadastro.js' %}"></script>
 {% endblock %}
