melhorado a mensagem de alerta para relatar erro ou para dizer que paciente foi encontado

--- a/templates/pacientes/cadastro.html
+++ b/templates/pacientes/cadastro.html
@@ -13,7 +13,7 @@
             <div class="card-body">
                 <fieldset class="col-lg">
                     <legend>Dados do Paciente</legend>
-                    <label id="lb_erro" class="text-center alert alert-danger" style="display: none"></label>
+                    <label id="msg" class="text-center alert alert-danger" style="display: none"></label>
                     <input id="sus_encontrado" type="checkbox" hidden>
                     <form method="post">
                         {% csrf_token %}
