correção de bugs no cadastro e na busca de pacientes

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -39,10 +39,10 @@
                         <a href="{% url 'home:index' %}" class="nav-link" >Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link" >Lista Pacientes</a>
+                        <a href="{% url 'pacientes:consultar' %}" class="nav-link" >Buscar Pacientes</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link" >Cadastro de Pacientes</a>
+                        <a href="{% url 'pacientes:cadastro' %}" class="nav-link" >Cadastro de Pacientes</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" >Agendamentos</a>
