--- a/templates/pacientes/consultar.html
+++ b/templates/pacientes/consultar.html
@@ -32,7 +32,7 @@
                         </select>
                     </div>
                     <div id="div_dado" class="col-md-4" style="display: none">
-                        <input class="form-control" id="dado" name="dado">
+                        <input class="form-control" id="dado" name="dado" required="required">
                     </div>
                     <div id="div_botao" class="col-md-4">
                         <button id="botao" class="btn btn-primary">Pesquisar</button>
