--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -45,7 +45,7 @@
                         <a href="{% url 'pacientes:cadastro' %}" class="nav-link" >Cadastro de Pacientes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" >Agendamentos</a>
+                        <a href="{% url 'agendamento:agendamento' %}" class="nav-link" >Agendamentos</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav float-right">
