--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -7,21 +7,34 @@
 <!-- Bloco de conteúdo da nossa página -->
 {% block conteudo %}
 <div class="container mt-5">
-  <div class="row">
-    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-      <div class="card">
-        <div class="card-header">
-          <h3 class="card-title">Cadastros de Pacientes</h3>
-        </div> 
-        <div class="card-body">
-          <legend>
-            Faça aqui os cadastros ou aletrações de dados dos pacientes.
-          </legend>
-            <a href="{% url 'pacientes:consultar' %}" class="btn btn-primary">CONSULTAR</a>
-            <a href="{% url 'pacientes:cadastro' %}" class="btn btn-primary">ALTERAR/CADASTRAR</a>
+    <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+            <div class="card">
+                <div class="card-header">
+                    <h3 class="card-title">Cadastros de Pacientes</h3>
+                </div>
+                <div class="card-body">
+                    <legend>
+                        Faça aqui os cadastros ou aletrações de dados dos pacientes.
+                    </legend>
+                    <a href="{% url 'pacientes:consultar' %}" class="btn btn-primary">CONSULTAR</a>
+                    <a href="{% url 'pacientes:cadastro' %}" class="btn btn-primary">ALTERAR/CADASTRAR</a>
+                </div>
+            </div>
         </div>
-      </div>
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+            <div class="card">
+                <div class="card-header">
+                    <h3 class="card-title">Agendamento de Pacientes</h3>
+                </div>
+                <div class="card-body">
+                    <legend>
+                        Faça aqui os agendamentos dos pacientes.
+                    </legend>
+                    <a href="{% url 'agendamento:agendar' %}" class="btn btn-primary">AGENDAMENTO</a>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 {% endblock %}
