--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -14,11 +14,12 @@
                     <h3 class="card-title">Cadastros de Pacientes</h3>
                 </div>
                 <div class="card-body">
-                    <legend>
+                    <p>
                         Faça aqui os cadastros ou aletrações de dados dos pacientes.
-                    </legend>
+                    </p>
                     <a href="{% url 'pacientes:consultar' %}" class="btn btn-primary">CONSULTAR</a>
-                    <a href="{% url 'pacientes:cadastro' %}" class="btn btn-primary">ALTERAR/CADASTRAR</a>
+                    <a href="{% url 'pacientes:cadastro_paciente' %}" class="btn btn-primary">ALTERAR/CADASTRAR</a>
+                    <a href="{% url 'pacientes:cadastro_familia' %}" class="btn btn-primary">FAMÍLIA</a>
                 </div>
             </div>
         </div>
@@ -28,9 +29,9 @@
                     <h3 class="card-title">Agendamento de Pacientes</h3>
                 </div>
                 <div class="card-body">
-                    <legend>
+                    <p>
                         Faça aqui os agendamentos dos pacientes.
-                    </legend>
+                    </p>
                     <a href="{% url 'agendamento:agendar' %}" class="btn btn-primary">AGENDAMENTO</a>
                 </div>
             </div>
